# Gentleman

./: .gitignore  CMakeLists.txt  COPYING  Makefile  README.md  test.gent
sir-make/src/: main.cpp
src/: build.cpp  build.hpp  help.cpp  help.hpp  main.cpp  project.cpp  project.hpp
src/lang/: codering.cpp  codering.hpp  generator.cpp  generator.hpp
src/lang/std/: base.cpp  base.hpp  lang_proc.cpp  lang_proc.hpp
test/: gent.json
test/src/: main.gent
